--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,11 @@ font-size: 20px;
 		color: rgb(255, 245, 238);
 		}
 		
-	 .listtwos {
-	 padding: 0px 30px 0px 40px;
-	} 
+ 
 .listtwo{
 	background: url('../img/car_tires_24x.png')100% 100% / 25px no-repeat;
+	padding: 0px 30px 0px 40px;
+	margin: 0px 30px 0px 0px;
 	
 	}
 .listone{
